Force button letter spacing to fix width changes

--- a/src/credo/static/credo/styles.css
+++ b/src/credo/static/credo/styles.css
@@ -26,6 +26,10 @@ svg.tooltipped:hover {
     opacity: 1;
 }
 
+.btn {
+    letter-spacing: normal;
+}
+
 #saveButton {
   float: right;
 }
